--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,4 +1,56 @@
-Marilyn Pothen Lab 1: Intro to HTML
+<!DOCTYPE html>
+    <html>
+        <head> 
+            <title>Marilyn Pothen Lab 1 </title>
+        </head>
+        <body>
+            <h1>
+                Marilyn Pothen Lab 1: Intro to HTML
+            </h1>
+            
+            <h2>First, the basics.</h2>
+            <p><em>Why am I taking <strong>INST377</strong></em>?</p>
+            <ul>
+                <li>To learn about the world of web development</li>
+                <li>Work on my Javascript and HTML/CSS skills</li>
+                <li>Explore a new area of InfoSci!</li>
+            </ul>
+
+            <p><em>Here are my <strong>top 5 favorite</strong> albums:</em></p>
+            <ol>
+                <li>Starboy - The Weekend</li>
+                <li>After Hours - The Weekend</li>
+                <li>Future Nostalgia - Dua Lipa</li>
+                <li>Thank Me Later - Drake</li>
+                <li>Sour - Olivia Rodrigo</li>
+            </ol>
+
+            <hr/>
+
+            <h2>About Marilyn</h2>
+            <p>I am a junior Information Science major at UMD. <em>Go Terps!</em></p>
+            <p>My favorite foods are <strong>french fries & blueberry waffles</strong></p>
+            <p>My career goal is to work as a <em><strong>business data analyst!</strong></em></p>
+            <p> Checkout my github repo for INST377: <br/> 
+                <a href = "https://github.com/mpothen1/INST377-Lab-Work"
+                    target = '_blank'> INST377 Lab Work</a>
+
+            <hr/>
+            <h2>Enjoy some mochi pictures:</h2>
+            <p><strong>There are 4 different mochis</strong></p>
+            <img src = "images/mochi.jpg", alt = "JPG of a mochi">
+            <img src = "images/mochi.gif", alt = "GIF of mochi">
+            <img src = "images/mochi.png", alt = "PNG of mochi">
+            <img src = "images/mochi.svg", alt = "SVG of mochi">
+
+            <p>That is all, <br/>
+                Thank you for visiting my first INST377 website!</p>
+
+
+
+        </body>
+    </html>
+<!-- Marilyn Pothen Lab 1: Intro to HTML
 
 First, the basics.
 
@@ -34,4 +86,4 @@ Images
 Don't forget to use alt text on your images. It's important for accessibility.
 
 Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+If you want your repo to be private, be sure to invite Prof A as a "collaborator."-->
