--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,4 +1,75 @@
-YOUR NAME Lab 3: Flexbox Demo
+<!DOCTYPE html>
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8'/>
+    <title>Some Web Page</title>
+    <link rel='stylesheet' href='styles.css'/>
+  </head>
+  <body>
+    <div class = 'wrapper'> 
+    <div class = 'topbar-container'>
+        <div class = 'topbar'>
+            Marilyn Pothen Lab 3: Flexbox Demo
+        </div>
+    </div>
+
+    <div class='menu-container'>
+        <div class='menu'>
+            <div class='date'>Aug 14, 2016</div>
+            <div class='links'>
+                <div class='demos'>
+                    <a href = './data.html' target = '_blank'>Database Demos</a>
+                </div>
+                <div class='main-page'>
+                    <a href = './index.html' target = '_blank'>Mainpage</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class='header-container'>
+        <div class='header'>
+            <div class='project'>
+                <a href = '#'>Group Project Link &#9662;</a>
+            </div>
+            <div class='logo'><img src='images/awesome-logo.svg'/></div>
+            <div class='github'>
+                <a href = 'https://github.com/mpothen1/INST377-Lab-Work' target = '_blank'>My Github &#9662;</a>
+            </div>
+        </div> 
+    </div>
+
+    <div class='photo-grid-container'>
+        <div class='photo-grid'>
+          <div class='photo-grid-item first-item'>
+            <img src='images/one.svg'/>
+          </div>
+          <div class='photo-grid-item'>
+            <img src='images/two.svg'/>
+          </div>
+          <div class='photo-grid-item'>
+            <img src='images/three.svg'/>
+          </div>
+          <div class='photo-grid-item'>
+            <img src='images/four.svg'/>
+          </div>
+          <div class='photo-grid-item last-item'>
+            <img src='images/five.svg'/>
+          </div>
+        </div>
+    </div>
+    
+    <div class='footer'>
+        <div class='footer-item footer-one'>footer item 1</div>
+        <div class='footer-item footer-two'>footer item 2</div>
+        <div class='footer-item footer-three'>footer item 3</div>
+    </div>
+  </div>
+  </body>
+</html>
+
+
+<!-- YOUR NAME Lab 3: Flexbox Demo
 
 Selectors
 Main Page
@@ -37,4 +108,4 @@ Images
 Don't forget to use alt text on your images. It's important for accessibility.
 
 Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+If you want your repo to be private, be sure to invite Prof A as a "collaborator."-->
