--- a/client/lab_carousel/index.html
+++ b/client/lab_carousel/index.html
@@ -42,6 +42,9 @@
     
 
     <div class='carousel'>
+        <div class="carousel_actions">
+            <button id="carousel_button--prev">Prev</button>
+        </div>
         <div class='carousel_item carousel_item--visible'>
             <img src='images/one.svg'/>
         </div>
@@ -63,7 +66,6 @@
         </div>
 
         <div class="carousel_actions">
-            <button id="carousel_button--prev">Prev</button>
             <button id="carousel_button--next">Next</button>
         </div>
     </div>
