--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -16,14 +16,12 @@
             <!--top header-->
             <div class="box is-size-4 has-background-warning">Marilyn Pothen's Lab 5</div>
 
-
-
             <div class="columns is-mobile is-centered is-vcentered">
                 <!--bottom row-->
                 <div class='column is-narrow'>
                     <div class="box">
                         <!--first componenet-->
-                        <form action ='/api' method = 'GET'>
+                        <form action ="/api" method = "GET">
                             <div class="control">
                                 <!--holds name-->
                                 <label class='label' for='firstname'>First Name </label>
