--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -68,3 +68,9 @@
 </body>
 
 </html>
+
+<!--//const services = []; 
+//fetch json data into a services array 
+/*fetch(endpoint)
+    .then(blob => blob.json())
+    .then(data => services.push(...data))*/-->
